--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -1909,3 +1909,15 @@ p{margin-top:10px;}
     .down{display:none}
   }
 }
+
+.notifications_list .popover-content{padding: 0px !important;}
+.ml_app_notification ul{width: 250px;margin-bottom: 0px;max-height: 200px;overflow-y: auto;}
+.ml_app_notification ul li{width: 250px;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;text-align: left; line-height: 31px;
+  border-bottom: 1px solid #ddd;  padding: 0px 5px; }
+.ml_app_notification ul li:last-child{border-bottom: 0px;}
+.ml_app_notification ul li a{color: #000;}
+.ml_app_notification ul li:hover{background: $mlBlue;}
+.ml_app_notification ul li:hover a{color: $mlWhite}
+.bs-tether-target-attached-bottom{margin-left: -80px;}
+.popover.bs-tether-element-attached-top:before, .popover.popover-bottom:before{margin-left: 70px !important;}
+.popover.bs-tether-element-attached-top:after, .popover.popover-bottom:after{margin-left: 71px !important;}
