--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -1466,7 +1466,7 @@ button.close {
 margin: 0px;
 }
 .show-information{position: absolute; background: rgba(51, 51, 51, 0.76); width: 100%; top: 0; left: 0; height: 100%; z-index: 9; color: #fff; padding: 10px;border-radius: 0 0 4px 4px;text-align: center; line-height:50px}
-.uploaded_files .panel-body{position: relative;}
+.uploaded_files .panel-body{position: relative;height: 158px; overflow: auto;}
 .full_user_block .form_inner_block {width: 100%;}
 .full_user_block .ml{	font-size: 32px;}
 
