--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -1945,3 +1945,20 @@ p{margin-top:10px;}
     height: 500px;
   }
 }
+.logout{
+  .logout_message{ width: 50%; margin: 0 auto; margin-top: 140px;
+    h2{
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    h3{
+      font-weight: bold;
+      font-size: 22px;
+    }
+  }
+  #login_wrap{
+    position: absolute;
+    top: 60px;
+    left: 50%;
+  }
+}
