--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -325,6 +325,7 @@ table .switch.on .slider:before {-webkit-transform: translateX(24px);-ms-transfo
 /*profile page*/
 .password_icon{position: absolute;float: right;right: 0;margin-top: -25px; margin-right: 20px;cursor: pointer;color: #273545;}
 .input_icon{position: absolute;float: right;right: 0;margin-top: -25px; margin-right: 20px;cursor: pointer;color: #273545;}
+.input_icon.fa-lock{color: #ef4647;}
 .delete_icon{position: absolute; float: right; right: 0; margin-top: -24px; margin-right: 7px; cursor: pointer; background: #ef4647; width: 30px; height: 30px; text-align: center; border-radius: 50%; color: #fff; /* padding: 9px; */ line-height: 29px;}
 .calendar_icon{position: absolute;float: right;right: 0;margin-top: -30px; margin-right: 20px;cursor: pointer;}
 .input_types{float: left;margin-right: 20px;}
@@ -378,6 +379,8 @@ table .switch.on .slider:before {-webkit-transform: translateX(24px);-ms-transfo
 .form_emails_white_right{float: left;width: 80%;padding-left: 5px;}
 .form_emails_white_right_scroll{height: 250px;}
 .profile_container .profile_accounts{height: 200px; background-color: #273545; border-radius: 10px; margin-top: 15px; text-align: center; position: relative; margin-bottom: 15px; color: #fff; width: 350px; padding: 10px 0px; font-size: 24px; text-shadow: none; }
+.profile_container .profile_accounts.swiper-slide-active{background-color: #ef4647;}
+.profile_container .profile_accounts.swiper-slide-active:before{border-color: #c70e0f #fff;}
 .profile_container .profile_accounts:before {content: ""; position: absolute; top: 0; right: 0; border-width: 0 25px 25px 0; border-style: solid; border-color: #0e1c2d #fff; }
 .profile_container .profile_accounts img{width: 100px; height: 60px }
 .profile_container .profile_accounts h3{border: 0px; color: #ffffff; font-size: 19px; font-weight: bold; margin-bottom: 14px; margin: 0px; }
@@ -936,7 +939,8 @@ button:focus{outline: 0;}
 .requested_input input[type="text"]{background: #fff; border: #ccc solid 1px; border-radius: 5px; padding: 10px;}
 .requested_input .req_input_icon{top: 31px; background: #ef4647; width: 25px; height: 25px; color: #ffffff; text-align: center; line-height: 25px; text-shadow: none; border-radius: 50%; right: -10px;}
 
-.requested_input .req_textarea_icon{ margin-right:5px;   top: 29px; background: #273545; width: 25px; height: 25px; color: #fff; text-align: center; line-height: 25px; text-shadow: none; border-radius: 50%;}
+.requested_input .req_textarea_icon{ margin-right:5px;   top: -4px; background: #273545; width: 25px; height: 25px; color: #fff; text-align: center; line-height: 25px; text-shadow: none; border-radius: 50%;}
+.requested_input .req_textarea_icon.fa-lock{background: #ef4647; }
 
 .btn-mlBlue {color: #fff; background-color: #273545; border-color: #273545;}
 .btn-mlBlue:hover {color: #fff; background-color: #273545; border-color: #273545;}
