--- a/client/stylesheets/css/mymoolya-icons.css
+++ b/client/stylesheets/css/mymoolya-icons.css
@@ -14,6 +14,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.my-ml-manage_schedule:before {
+  content: "\e9e9";
+}
+.my-ml-notifications:before {
+  content: "\e9ea";
+}
+.my-ml-settings_new:before {
+  content: "\e9eb";
+}
 .my-ml-Company:before {
   content: "\e9e4";
 }
