--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -943,6 +943,9 @@ button:focus{outline: 0;}
 .requested_input .req_textarea_icon{ margin-right:5px;   top: 29px; background: #273545; width: 25px; height: 25px; color: #fff; text-align: center; line-height: 25px; text-shadow: none; border-radius: 50%;}
 .requested_input .req_textarea_icon.fa-lock{background: #ef4647; }
 
+.requested_input .req_header_icon{ margin-right:20px;   top: 29px; background: #273545; width: 25px; height: 25px; color: #fff; text-align: center; line-height: 25px; text-shadow: none; border-radius: 50%;}
+.requested_input .req_header_icon.fa-lock{background: #ef4647; }
+
 .btn-mlBlue {color: #fff; background-color: #273545; border-color: #273545;}
 .btn-mlBlue:hover {color: #fff; background-color: #273545; border-color: #273545;}
 
@@ -1078,6 +1081,7 @@ textarea.comment-input-box{border: 2px solid #ddd; border-radius: 4px; margin-bo
 
 
 .list_block .fa.fa-lock {position: absolute;left:4px;top:2px; font-size: 18px; color: #ee4847}
+.list_block .fa.fa-unlock {position: absolute;left:4px;top:2px; font-size: 18px; color: #273545}
 
 .inputfile{width:.1px;height:.1px;opacity:0;overflow:hidden;position:absolute;z-index:-1}
 .inputfile + label{max-width:100%;text-overflow:ellipsis;white-space:nowrap;cursor:pointer;display:inline-block;overflow:hidden;padding:.625rem 1.25rem}
