--- a/client/stylesheets/css/mymoolya-icons.css
+++ b/client/stylesheets/css/mymoolya-icons.css
@@ -14,6 +14,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.my-ml-i_follow:before {
+  content: "\e9ec";
+}
+.my-ml-my_followers:before {
+  content: "\e9ed";
+}
+.my-ml-offerings:before {
+  content: "\e9ee";
+}
+.my-ml-office_bearer:before {
+  content: "\e9ef";
+}
 .my-ml-manage_schedule:before {
   content: "\e9e9";
 }
