--- a/client/stylesheets/css/react-big-calendar.css
+++ b/client/stylesheets/css/react-big-calendar.css
@@ -305,7 +305,7 @@ button.rbc-input::-moz-focus-inner {
 .rbc-calendar {
   box-sizing: border-box;
   height: 100%;
-  /*display: flex;  commit due to height of view less*/
+  display: flex;
   flex-direction: column;
   align-items: stretch;
 }
@@ -714,47 +714,4 @@ button.rbc-input::-moz-focus-inner {
 .rbc-month-header {
   min-height: 36px;
   line-height: 36px;
-}
-
-/**
-    Custom class
- */
-
-.rbc-slot-full-status {
-  background-color: rgba(149, 31, 31, 0.8);
-  border: 1px solid white;
-  width: 100%;
-  height: 100%;
-}
-
-.rbc-slot-filling-fast-status {
-  background-color: rgba(38, 161, 38, 0.69);
-  border: 1px solid white;
-  width: 100%;
-  height: 100%;
-}
-
-.rbc-slot-available-status {
-  background-color: rgba(255, 255, 0, 0.5);
-  border: 1px solid white;
-  width: 100%;
-  height: 100%;
-}
-
-.rbc-slot-holiday-status {
-  background: url("/images/beach.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  border: 1px solid white;
-  width: 100%;
-  height: 100%;
-}
-
-.rbc-slot-travel-status {
-  background: url("/images/airplane.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  border: 1px solid white;
-  width: 100%;
-  height: 100%;
 }
