--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -769,7 +769,7 @@ li {display: inline-block; width: 14px; height: 14px; margin: 0 4px; text-indent
    }
   .panel-collapse{width: 100%; }
   .action_buttons{
-  bottom:0px;overflow-x: auto; overflow-y: hidden; white-space: nowrap;text-align:center;
+  bottom:0px;overflow-x: auto; overflow-y: hidden; white-space: nowrap;text-align:center;height: 50px;
   ul{margin: 0px; padding: 3px;
     li{
     display: inline-block; text-align: center;margin-right:30px;
@@ -779,7 +779,7 @@ li {display: inline-block; width: 14px; height: 14px; margin: 0 4px; text-indent
         cursor: no-drop !important;color: rgba(255, 255, 255, 0.49) !important;
       }
       &:hover{
-        text-decoration:none;padding: 3px;border-radius: 5px;color:$mlBlue;
+        text-decoration:none;padding: 3px;border-radius: 5px;color:$mlWhite;
       }
     }
   }
