--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -786,7 +786,7 @@ li {display: inline-block; width: 14px; height: 14px; margin: 0 4px; text-indent
   }
 }
 .related_buttons{
-bottom:0px;overflow-x: auto; overflow-y: hidden; white-space: nowrap;
+bottom:0px;overflow-x: auto; overflow-y: hidden; white-space: nowrap;height: 50px;
 .horizon-swiper{
   .horizon-outer{
     .horizon-inner{
@@ -807,7 +807,9 @@ bottom:0px;overflow-x: auto; overflow-y: hidden; white-space: nowrap;
     }
   ul{margin: 0px; padding:3px;
     li{display: inline-block; text-align: center;margin-right:5px;
+      .notext{    width: 90%; color: #fff; line-height: 40px; font-size: 18px; margin: 0 auto;}
       a{display: block; text-shadow: none;color:$mlWhite;padding: 3px; border-radius: 5px;font-size:12px;
+
         .team-block{margin-bottom:0px;background:$mlGray;
           .team_img{width:60px;height:60px;margin:5px 0px;}
           h3{font-size:10px;padding:5px;background:$mlRed;color:$mlWhite;
