--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -389,9 +389,15 @@ background:$mlBlue; width: 100%;position:absolute;bottom:0px;overflow-x: auto; o
       }
     }
   }
+  .back_btn{
+    float: left;position: absolute;font-size: 24px;left: 5px;color: $mlRed;
+    &:hover{
+      color: $mlBlue;
+    }
+  }
 .startup-logo{
-  position:absolute;left:7px;top:7px;height: 44px;border-radius: 4px;box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
-  img{height: 44px;border-radius: 4px;}
+  position:absolute;left:30px;top:5px;height: 44px;border-radius: 4px;color:$mlBlue;font-weight:bold;/*box-shadow: 0px 0px 2px rgba(0,0,0,0.5);*/
+  img{height: 44px;width:44px;border-radius: 50%;}
 }
 .app_menu ul .menu_item .menu_in img{
   margin: 0px;
