--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -263,7 +263,19 @@ $menuTrans:all 0.5s linear;
     .nav>li>a:focus, .nav>li>a:hover{background-color: transparent;}
   }
   .users_list{padding: 5px 0px 4px 0px;border-radius: 6px;background-color: #273545;border: 1px solid #e3e3e3;margin-bottom:6px;
-      li{display: inline-block; margin:0px 6px; text-align: center; /* width: 120px; height: 120px; */ vertical-align: top;position: relative;
+      .checkedClass{
+        a{
+          img{border:$mlRed solid 2px;}
+          .tooltiprefer{
+            span{background: $mlRed;
+            &:before{
+              border-bottom-color:$mlRed;
+            }}
+          }
+        }
+
+      }
+    li{display: inline-block; margin:0px 6px; text-align: center; /* width: 120px; height: 120px; */ vertical-align: top;position: relative;
         a{text-decoration: none;
           /*span{background:$mlGray; position: absolute; border-radius: 50%; width: 12px; height: 12px; margin-left: 46px;color: $mlBlue;}*/
           span.green{background:#09ce09; position: absolute; border-radius: 50%; width: 12px; height: 12px; margin-left: 46px;}
