--- a/client/stylesheets/login.css
+++ b/client/stylesheets/login.css
@@ -1,6 +1,6 @@
 .brclear{clear: both;}
 .login_bg video{    position: fixed;top: 50%;left: 50%;min-width: 100%;min-height: 100%;width: auto;height: auto;z-index: -100;transform: translateX(-50%) translateY(-50%);background-size: cover;transition: 1s opacity;}
-.login_bg img{position: absolute;z-index: 1;top: 20px;left: 50%;transform: translateX(-50%);}
+.login_bg img{position: absolute;z-index: 1;top: -2px;left: calc(50% - 265px);/*transform: translateX(-50%);*/}
 .login_block{height: 214px;width: 356px;background: #FFC20E;z-index: 2;position: absolute;top: 250px;left: 50%;transform: translateX(-50%);}
 .login_block:after{position:absolute;right:-50px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 107px 0 107px 50px;border-color: transparent transparent transparent #FFC20E;top: 0px;}
 .login_block:before{position:absolute;left:-50px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 107px 50px 107px 0px;border-color: transparent #FFC20E transparent transparent;top: 0px;}
@@ -43,16 +43,23 @@
   -webkit-text-fill-color: #fff !important;
   background-color: rgba(0,0,0,1) !important;
 }
-.video_bg{display: none;}
-.login_bg video{display: block;}
-
+.login_bg{text-align: center;height: 678px;overflow: hidden;position: relative;}
+.video_bg{display: block;background-image: url("../images/moolya-login-bg.jpg");background-size: cover;background-position: bottom center;display: block;position: fixed;top: 0px;left: 0px;width: 100%;height: 100%;background-repeat: no-repeat;}
+.login_bg video{display: none;}
+.app_msg{position: absolute;text-align: center;width: 828px;font-size: 11px;left: 19%;background-color: rgba(255,255,255,0.5);bottom: -33px;height: 60px;line-height: 27px;}
+.app_msg:before{position: absolute; left: -29px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 30px 29px 30px 0px; border-color: transparent rgba(255,255,255,0.5) transparent transparent; top: 0px;}
+.app_msg:after{position: absolute; right: -29px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 30px 0 30px 29px; border-color: transparent transparent transparent rgba(255,255,255,0.5); top: 0px;}
+.app_msg p{margin: 0px;padding: 0px 10px;}
+.m_red{color:#ef4647;}
+.m_blue{color:#005593;}
+.m_yel{color:#ffc20e;}
 @media only screen and ( max-width: 768px ){
   .login_bg video{display: none;}
-  .video_bg{background-image: url("../images/video_bg.png");background-size: cover;background-position: center center;display: block;position: fixed;top: 0px;left: 0px;width: 100%;height: 100%;background-repeat: no-repeat;}
+  .video_bg{background-image: url("../images/moolya-login-bg.jpg");background-size: cover;background-position: center center;display: block;position: fixed;top: 0px;left: 0px;width: 100%;height: 100%;background-repeat: no-repeat;}
 }
 @media only screen and ( max-width: 1024px ){
   .login_bg video{display: none;}
-  .video_bg{background-image: url("../images/video_bg2.png");background-size: cover;background-position: center center;display: block;position: fixed;top: 0px;left: 0px;width: 100%;height: 100%;background-repeat: no-repeat;}
+  .video_bg{background-image: url("../images/moolya-login-bg.jpg");background-size: cover;background-position: center center;display: block;position: fixed;top: 0px;left: 0px;width: 100%;height: 100%;background-repeat: no-repeat;}
 }
 
 video::-internal-media-controls-download-button {
