--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -1563,35 +1563,36 @@ p{margin-top:10px;}
 }
 .notification_view{
   li{
-   float: left;  width: 48%; margin-left: 17px; margin-top: 16px; border-radius: 8px;
+   float: left;  width: 48%; margin-left: 17px; margin-bottom: 16px; border-radius: 8px;
     &.unread{
-      background: $mlBlue;color: $mlWhite;text-shadow: none;
+      background: #aaa;color: $mlBlack;text-shadow: none;
       .left_icon{
         background: #405368;
       }
       .right_text{
         span{
-          color: $mlWhite;
+          color: $mlBlack;
         }
       }
     }
     &.read{
-      background: $mlGray;
+      background: #ddd;
     }
     .left_icon{
-          float: left; width: 20%; height: 80px; background: $mlBlue; padding-top: 10px; padding-left: 25px; border-radius:8px 0 0 8px;
+          float: left; width: 15%; height: 80px; background: #405368; padding-top: 20px; border-radius:8px 0 0 8px;text-align: center;
     img{
     border-radius: 50%; width: 70px; height: 70px; border: #b9c5cc solid 3px; margin-top: -5px;
     }
       .ml{
-        font-size: 55px; border-radius:50%; color: $mlWhite; text-shadow: none; padding:10px;
+        font-size: 44px; border-radius:50%; color: $mlWhite; text-shadow: none; padding:10px;
       }
     }
     .right_text{
-      float: left; width: 80%; height: 80px; padding:5px; position:relative;overflow: auto;
+      float: left; width: 85%; height: 80px; padding:5px; position:relative;overflow: auto;
       span{
-        font-size: 12px;font-weight:bold;color:$mlBlue;
+        font-size: 11px;font-weight:normal;color:$mlBlack;text-transform: uppercase;float: right;
       }
+      p{font-size: 14px;margin: 0px;}
       .read_more{
             margin-top: -26px; position: absolute; right: 8px; bottom: 0; font-size: 20px;
     a{
